--- a/examples/clients/README
+++ b/examples/clients/README
@@ -2,15 +2,6 @@ This folder contains examples which show how to connect to the
 PHP/Java Bridge from PYTHON and Chicken/SCHEME.
 
 
-* sample.php: A pure PHP example which communicates directly with the
-  server.
-
-  Start the server with java -jar JavaBridge.jar and invoke the
-  example with:
- 
-    php sample.php
-
-
 * getProperties.py: Connects to the PHP/Java Bridge, asks for
   System.getProperties() and displays the first entry. 
 
@@ -36,9 +27,18 @@ PHP/Java Bridge from PYTHON and Chicken/SCHEME.
   Start the server with java -jar JavaBridge.jar, compile the scheme file
   into native code and invoke it:
 
-    csc -lxslt systemGetProperties.scm && ./systemGetProperties |tee out.html
+    csc -lxslt getProperties.scm && ./getProperties |tee out.html
 
   After that you can examine the out.html with a web browser.
+
+
+* sample.php: A pure PHP example which communicates directly with the
+  server.
+
+  Start the server with java -jar JavaBridge.jar and invoke the
+  example with:
+ 
+    php sample.php
 
 
 These examples use the python and Scheme script languages. They can be
